# codex-mcp

./: .env.example  .gitignore  CODEX_MCP_SETUP.md  LICENSE  README.md  codex_mcp_server.py  pyproject.toml
.claude/commands/: ask-codex.md  codex-async.md  review-with-codex.md
owlex/: __init__.py  config.py  council.py  engine.py  models.py  prompts.py  server.py
owlex/agents/: __init__.py  base.py  codex.py  gemini.py
owlex/analytics/: __init__.py
owlex/providers/: __init__.py  codex.py  gemini.py  openai_api.py  openrouter.py  protocol.py  registry.py
owlex/storage/: __init__.py  schema.py  usage.py
tests/: __init__.py  conftest.py  test_agents.py  test_cleaners.py  test_config.py  test_council.py  test_lifecycle.py  test_server.py
