[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owlex"
version = "0.1.1"
description = "MCP server for Codex CLI and Gemini CLI integration with Claude Code"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "claude", "codex", "gemini", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
owlex-server = "owlex.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["owlex*"]
